--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
     <title>PaintRoom Project WIP</title>
     <script src="main.js"></script>
     <!-- TODO: import Bootstrap for style and paint.js for canvas functions -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <div>
-        <h1>WIP</h1>
+    <div class="jumbotron text-center">
+        <h1>PaintRoom Project WIP</h1>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xl">
+                <p>currently just a paragraph</p>
+            </div>
+        </div>
     </div>
 </body>
