add documents and raw test

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="jumbotron text-center">
         <h1>PaintRoom Project WIP</h1>
     </div>
-    <div class="container">
-        <div class="row">
+    <div id="drawspace" class="drawspace">
+        <!--<div class="row">
             <div class="col-xl">
                 <p>currently just a paragraph. But wait! Canvas time!</p>
             </div>
@@ -28,6 +28,6 @@
             <div class="col-xl">
                 <div id="drawspace" class="drawspace"></div>
             </div>
-        </div>
+        </div>-->
     </div>
 </body>
