--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div class="jumbotron text-center">
         <h1>PaintRoom Project WIP</h1>
     </div>
+    <div id="testbox" class="testbox"></div>
     <div id="drawspace" class="drawspace">
         <!--<div class="row">
             <div class="col-xl">
